Fix activity label text overflow!

--- a/web/css/_activity_list.sass
+++ b/web/css/_activity_list.sass
@@ -125,11 +125,14 @@ ul.activities
       height: 55px
 
     span
+      display: block
+      height: 1.3em
+      overflow: hidden
+      text-overflow: ellipsis
+
       color: $white
       font-weight: bold
       font-size: 1.25em
-
-      word-wrap: break-word
 
     +hover_shrink(0.95)
 
